--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "kabegami-crawler"
+name = "kabegame"
 version = "0.1.0"
 description = "一个图片爬虫平台，支持插件配置的网址爬取"
 authors = ["you"]
@@ -11,6 +11,7 @@ edition = "2021"
 
 [build-dependencies]
 tauri-build = { version = "2.0", features = [] }
+serde_json = "1.0"
 
 [target.'cfg(windows)'.dependencies]
 winver = "1"
@@ -32,8 +33,10 @@ tauri-plugin-shell = "2.0"
 tauri-plugin-fs = "2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+regex = "1.11"
+governor = "0.7"
 tokio = { version = "1", features = ["full"] }
-reqwest = { version = "0.11", features = ["blocking"] }
+reqwest = { version = "0.11", features = ["blocking", "json"] }
 scraper = "0.19"
 select = "0.6"
 url = "2.5"
