--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "crawler-plugins"]
 	path = crawler-plugins
-	url = git@github.com:kabegame/crawler-plugins.git
+	url = https://github.com/kabegame/crawler-plugins.git
