--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,7 +36,7 @@ serde_json = "1.0"
 regex = "1.11"
 governor = "0.7"
 tokio = { version = "1", features = ["full"] }
-reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
+reqwest = { version = "0.11", features = ["blocking", "json", "stream", "native-tls"] }
 futures-util = "0.3"
 scraper = "0.19"
 select = "0.6"
