--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,13 +11,13 @@ edition = "2021"
 
 [build-dependencies]
 tauri-build = { version = "2.0", features = [] }
-serde_json = "1.0"
 
 [target.'cfg(windows)'.dependencies]
 winver = "1"
 windows-sys = { version = "0.52", features = [
     "Win32_Foundation",
     "Win32_Graphics_Gdi",
+    "Win32_Storage_FileSystem",
     "Win32_System_Com",
     "Win32_System_DataExchange",
     "Win32_System_Memory",
