--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "kabegame",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "让你的桌面充满二次元气息的壁纸管理器！收集、管理、轮播，让老婆们（或老公们）每天陪伴你~ 支持插件扩展，轻松爬取各种二次元壁纸资源~",
   "type": "module",
   "scripts": {
     "dev": "node scripts/run.js dev --watch",
     "dev:no-watch": "node scripts/run.js dev",
     "build": "node scripts/run.js build",
+    "typecheck": "vue-tsc",
+    "build:frontend": "vue-tsc && vite build",
     "package-plugin": "nx run crawler-plugins:package",
     "package-plugin:local": "nx run crawler-plugins:package-local",
     "clean-nx-cache": "node scripts/clean-nx-cache.js",
