--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@ dist
 # Tauri
 src-tauri/target
 src-tauri/Cargo.lock
+src-tauri/bin/*
+!src-tauri/bin/.gitkeep
 
 # Tauri generated icons (keep only icon.png and README.md)
 src-tauri/icons/*
