--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vueuse/core": "^14.1.0",
     "axios": "^1.6.7",
     "element-plus": "^2.5.14",
+    "monaco-editor": "^0.52.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
@@ -33,6 +34,8 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.5.1",
     "archiver": "^7.0.1",
+    "chalk": "^5.3.0",
+    "commander": "^12.1.0",
     "husky": "^9.1.7",
     "nodemon": "^3.1.10",
     "nx": "^20.0.0",
