--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,6 +36,7 @@ tauri = { version = "2.0", features = ["tray-icon"] }
 tauri-plugin-dialog = "2.0"
 tauri-plugin-shell = "2.0"
 tauri-plugin-fs = "2.0"
+clap = { version = "4.5", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 regex = "1.11"
@@ -55,6 +56,7 @@ auto-launch = "0.5"
 rusqlite = { version = "0.31", features = ["bundled"] }
 
 sha2 = "0.10"
+base64 = "0.22"
 
 
 [features]
