--- a/project.json
+++ b/project.json
@@ -1,26 +1,3 @@
 {
-  "name": "kabegame",
-  "targets": {
-    "dev": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "vite"
-      },
-      "dependsOn": ["crawler-plugins:package-to-data"]
-    },
-    "tauri:dev": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "tauri dev"
-      },
-      "dependsOn": ["crawler-plugins:package-to-data"]
-    },
-    "tauri:dev:watch": {
-      "executor": "nx:run-commands",
-      "options": {
-        "command": "tauri dev --additional-watch-folders ..\\crawler-plugins"
-      },
-      "dependsOn": ["crawler-plugins:package-to-data"]
-    }
-  }
+  "name": "kabegame"
 }
