--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "kabegame",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "让你的桌面充满二次元气息的壁纸管理器！收集、管理、轮播，让老婆们（或老公们）每天陪伴你~ 支持插件扩展，轻松爬取各种二次元壁纸资源~",
   "type": "module",
   "scripts": {
-    "dev": "node scripts/run.js dev --watch",
-    "dev:no-watch": "node scripts/run.js dev",
+    "dev": "node scripts/run.js dev",
     "build": "node scripts/run.js build",
     "typecheck": "vue-tsc",
     "build:frontend": "vue-tsc && vite build",
