--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "kabegame"
-version = "1.1.2"
+version = "1.2.0"
 description = "一个图片爬虫平台，支持插件配置的网址爬取"
 authors = ["you"]
 license = ""
 repository = ""
 edition = "2021"
+default-run = "kabegame"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
