--- a/src-tauri/core/Cargo.toml
+++ b/src-tauri/core/Cargo.toml
@@ -27,6 +27,8 @@ auto-launch = { workspace = true }
 rusqlite = { workspace = true }
 sha2 = { workspace = true }
 base64 = { workspace = true }
+lru = { workspace = true }
+sled = { workspace = true }
 
 [target.'cfg(windows)'.dependencies]
 winver = { workspace = true, optional = true }
