--- a/src-tauri/app-cli/Cargo.toml
+++ b/src-tauri/app-cli/Cargo.toml
@@ -6,7 +6,7 @@ edition = { workspace = true }
 [dependencies]
 kabegame-core = { workspace = true }
 tauri = { workspace = true }
-clap = { workspace = true }
+clap = { version = "4.5", features = ["derive"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
