--- a/src-tauri/core/Cargo.toml
+++ b/src-tauri/core/Cargo.toml
@@ -10,38 +10,48 @@ tauri = { workspace = true }
 
 serde = { workspace = true }
 serde_json = { workspace = true }
-regex = { workspace = true }
-governor = { workspace = true, optional = true }
+regex = "1.11"
+governor = { version = "0.7", optional = true }
 tokio = { workspace = true }
-reqwest = { workspace = true }
-futures-util = { workspace = true }
-scraper = { workspace = true }
-select = { workspace = true }
+reqwest = { version = "0.11", features = ["blocking", "json", "stream", "native-tls"] }
+futures-util = "0.3"
+scraper = "0.19"
+select = "0.6"
 url = { workspace = true }
 uuid = { workspace = true }
-dirs = { workspace = true }
+dirs = "5.0"
 image = { workspace = true }
 zip = { workspace = true }
 rhai = { workspace = true }
-auto-launch = { workspace = true }
-rusqlite = { workspace = true }
+auto-launch = "0.5"
+rusqlite = { version = "0.31", features = ["bundled"] }
 sha2 = { workspace = true }
 base64 = { workspace = true }
-lru = { workspace = true }
-sled = { workspace = true }
+lru = "0.12"
+sled = "0.34"
 
 [target.'cfg(windows)'.dependencies]
-winver = { workspace = true, optional = true }
-windows-sys = { workspace = true }
-windows = { workspace = true, optional = true }
-winreg = { workspace = true, optional = true }
+winver = { version = "1", optional = true }
+windows = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell"], optional = true }
+winreg = { version = "0.52", optional = true }
 dokan = { version = "0.3.1", optional = true }
 widestring = { version = "0.4.3", optional = true }
 winapi = { version = "0.3.9", features = ["ntstatus", "winnt", "winbase"], optional = true }
+windows-sys = { version = "0.52", features = [
+  "Win32_Foundation",
+  "Win32_Graphics_Dwm",
+  "Win32_Graphics_Gdi",
+  "Win32_Storage_FileSystem",
+  "Win32_System_Com",
+  "Win32_System_DataExchange",
+  "Win32_System_LibraryLoader",
+  "Win32_System_Memory",
+  "Win32_UI_Shell",
+  "Win32_UI_WindowsAndMessaging",
+], optional = true }
+
 
 [features]
-default = ["tray", "wallpaper", "virtual-drive"]
-custom-protocol = ["tauri/custom-protocol"]
 tray = ["dep:governor"]
-wallpaper = ["dep:governor", "dep:winver", "dep:windows", "dep:winreg"]
-virtual-drive = ["dep:dokan", "dep:widestring", "dep:winapi", "dep:winreg"]
+wallpaper = ["dep:governor", "dep:winver", "dep:windows", "dep:winreg", "dep:windows-sys"]
+virtual-drive = ["dep:dokan", "dep:widestring", "dep:winapi", "dep:winreg", "dep:windows-sys"]
