--- a/src-tauri/app-main/Cargo.toml
+++ b/src-tauri/app-main/Cargo.toml
@@ -4,11 +4,12 @@ version = { workspace = true }
 edition = { workspace = true }
 
 [dependencies]
-kabegame-core = { workspace = true, features = ["tray", "wallpaper", "virtual-drive"] }
+kabegame-core = { workspace = true }
 tauri = { workspace = true, features = ["protocol-asset"] }
 tauri-plugin-dialog = "2.0"
 tauri-plugin-shell = "2.0"
 tauri-plugin-fs = "2.0"
+governor = {  version = "0.7", optional = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
@@ -17,19 +18,27 @@ sha2 = { workspace = true }
 uuid = { workspace = true }
 
 [target.'cfg(windows)'.dependencies]
-windows-sys = { version = "0.52", features = [
+windows-sys = { workspace = true }
+winreg = "0.52"
+winver = "1"
+dokan = {version = "0.3.1", optional = true}
+widestring = {version = "0.4.3", optional = true}
+winapi = { version = "0.3.9", features = ["ntstatus", "winnt", "winbase"], optional = true }
+windows = { version = "0.52", features = [
   "Win32_Foundation",
-  "Win32_System_DataExchange",
+  "Win32_System_Com",
   "Win32_UI_Shell",
-  "Win32_UI_WindowsAndMessaging",
 ] }
 
 [build-dependencies]
 tauri-build = { workspace = true }
 
 [features]
-default = ["custom-protocol"]
+default = ["custom-protocol", "tray", "virtual-drive"]
+tray = ["dep:governor"]
 custom-protocol = ["tauri/custom-protocol", "kabegame-core/custom-protocol"]
+virtual-drive = ["dep:dokan", "dep:widestring", "dep:winapi", "kabegame-core/virtual-drive"]
+
 
 [[bin]]
 name = "kabegame"
