--- a/src-tauri/core/Cargo.toml
+++ b/src-tauri/core/Cargo.toml
@@ -28,6 +28,7 @@ sha2 = { workspace = true }
 base64 = { workspace = true }
 lru = "0.12"
 sled = "0.34"
+memmap2 = { version = "0.9", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 windows-sys = { version = "0.52", features = [
@@ -42,11 +43,14 @@ windows-sys = { version = "0.52", features = [
   "Win32_UI_Shell",
   "Win32_UI_WindowsAndMessaging",
 ]}
+dokan = { version = "0.3.1", optional = true }
+widestring = { version = "0.4.3", optional = true }
+winapi = { version = "0.3.9", features = ["ntstatus", "winnt", "winbase"], optional = true }
 
 
 [features]
 custom-protocol = ["tauri/custom-protocol"]
-virtual-drive = []
+virtual-drive = ["dep:dokan", "dep:widestring", "dep:winapi", "dep:memmap2"]
 
 [profile.release]
 lto = "thin"
