--- a/apps/plugin-editor/package.json
+++ b/apps/plugin-editor/package.json
@@ -10,7 +10,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@kabegame/core": "workspace:*",
     "@tauri-apps/api": "^2.0",
-    "@tauri-apps/plugin-dialog": "^2.0",
+    "@tauri-apps/plugin-dialog": "2.4.2",
     "@tauri-apps/plugin-fs": "^2.0",
     "@tauri-apps/plugin-shell": "^2.0",
     "@vueuse/core": "^14.1.0",
