--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kabegame",
-  "version": "2.1.5",
+  "version": "2.1.6",
   "description": "让你的桌面充满二次元气息的壁纸管理器！收集、管理、轮播，让老婆们（或老公们）每天陪伴你~ 支持插件扩展，轻松爬取各种二次元壁纸资源~",
   "type": "module",
   "scripts": {
@@ -21,7 +21,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@tauri-apps/api": "^2.0",
-    "@tauri-apps/plugin-dialog": "^2.0",
+    "@tauri-apps/plugin-dialog": "2.4.2",
     "@tauri-apps/plugin-fs": "^2.0",
     "@tauri-apps/plugin-shell": "^2.0",
     "@vueuse/core": "^14.1.0",
